--- a/春游 - 2025年3月27日/intro.html
+++ b/春游 - 2025年3月27日/intro.html
@@ -135,9 +135,14 @@
 }
 
 </style>
-        
+        <link rel="stylesheet" href="./style.css">
         </head>
         <body class="vscode-body vscode-light">
+            <div class="title">
+              <div class="modal">
+                <h1>春游</h1>
+              </div>
+            </div>
             <h1 id="春游---2025年3月27日">春游 - 2025年3月27日</h1>
 <h2 id="行程信息">行程信息</h2>
 <h3 id="长征">长征</h3>
