加了宣誓词

--- a/春游 - 2025年3月27日/intro.html
+++ b/春游 - 2025年3月27日/intro.html
@@ -149,7 +149,7 @@
 <ul>
 <li>10:00 出发</li>
 <li>10:45 到达目的地：横店·红军长征博览城</li>
-<li>11:10 宣誓</li>
+<li>11:10 宣誓（宣誓词详见附件）</li>
 <li>11:30 开始长征</li>
 <li>12:55 到达野炊地点并开始野炊</li>
 <li>13:45 开饭</li>
@@ -212,7 +212,8 @@
 <h2 id="附件">附件</h2>
 <p><a href="./VID_20250327_122341.mp4">“飞夺泸定桥”</a><br>
 <a href="./VID_20250327_184005.mp4">过鬼屋</a><br>
-<a href="./VID_20250327_195942.mp4">在雨中奔跑找车</a></p>
+<a href="./VID_20250327_195942.mp4">在雨中奔跑找车</a><br>
+<a href="./宣誓词.docx">宣誓词</a></p>
 
             
             
